# agh-community-bot

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/config/: config_entry.py
src/config/models/: config_entry_model.py
src/features/anecdote/: anecdote_config.py  anecdote_feature.py
src/features/anecdote/handlers/: message_handler.py
src/features/anecdote/models/: anecdote.py  anecdote_model.py  last_message.py  used_anecdote.py
src/features/anecdote/store/: anecdote_store.py
src/features/anecdote/utils/: activity_manager.py  activity_utils.py  anecdote_manager.py  anecdote_utils.py
src/features/captcha/: captcha_config.py  captcha_feature.py
src/features/captcha/handlers/: button_press_handler.py  user_join_leave_handler.py
src/features/captcha/models/: captcha.py
src/features/captcha/store/: captcha_store.py
src/features/captcha/utils/: captcha_generator.py  captcha_manager.py  captcha_timeout_monitor.py  captcha_utils.py  timeout_utils.py
src/features/config/: config_feature.py
src/features/config/models/: chat_owner.py
src/per_chat_config/: config_field.py
src/per_chat_config/models/: config_entry.py
src/store/: db.py  db_store.py  redis_store.py
src/utils/: api_utils.py  app_config.py  bot.py  config.py  event_handler.py  postgres_utils.py
