[project]
name = "agh-community-bot"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.5"
dependencies = [
    "mypy>=0.910",
    "python-dotenv>=0.20.0",
    "redis[hiredis]>=3.5.3",
    "ruff>=0.0.17",
    "telethon[cryptg]>=1.39.0",
    "types-redis>=4.4.0.0",
]

[tool.mypy]
follow_untyped_imports = true

[tool.ruff.format]
quote-style = "double"
