[project]
name = "agh-community-bot"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.5"
dependencies = [
    "python-dotenv>=0.20.0",
    "redis>=3.5.3",
    "telethon>=1.39.0",
]

[project.optional-dependencies]
speed = [
    "cryptg>=0.3.1",
    "hiredis>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=0.910",
    "ruff>=0.0.17",
    "types-redis>=4.4.0.0",
]

[tool.mypy]
follow_untyped_imports = true

[tool.ruff.format]
quote-style = "double"
